<resources>
    <string name="app_name">MovieApp</string>

    <string name="label_genres">Műfaj:</string>
    <string name="label_budget">Költségvetés:</string>
    <string name="label_release_date">Premier dátuma:</string>
    <string name="label_revenue">Bevétel:</string>
    <string name="label_popular_movies">Népszerű filmek</string>
    <string name="label_search_movies">Film keresése</string>
    <string name="label_movie_details">Film adatai</string>
    <string name="label_retry_action">Frissítés</string>
    <string name="hint_search">Keresendő film címe</string>
    <string name="warning_empty_list">Nem található a keresésnek megfelelő elem</string>
    <string name="warning_network_error">A kiszolgálóval folytatott kommunikáció során hiba történt!\nKérlek, ellenőrizd az internetkapcsolatot!</string>
</resources>