<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="state"
            type="com.example.movieapp.models.state.ViewState" />
        <variable
            name="onRetryListener"
            type="com.example.movieapp.scenes.common.viewmodel.ErrorHandlingViewModel" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffff"
        setCoverVisibility="@{state}">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textAlignment="center"
            android:text="@string/warning_empty_list"
            android:textColor="@color/black"
            setEmptyVisibility="@{state}"
            />

        <LinearLayout
            setErrorVisibility="@{state}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="@string/warning_network_error"
                android:textAlignment="center" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="12dp"
                android:onClick="@{() -> onRetryListener.onRetryTapped(state)}"
                android:text="@string/label_retry_action" />
        </LinearLayout>

        <ProgressBar
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_gravity="center"
            android:indeterminateTint="#222222"
            android:progressTint="#222222"
            setProgressVisibility="@{state}"
            />

    </FrameLayout>

</layout>